FEATURE : test unknown token